# update-jira-labels

./: Dockerfile  LICENSE  action.yaml  main.py  pyproject.toml  update_jira_labels.py
.github/: dependabot.yml
apps/: dto.py  jira_clients.py
tests/: test_client.py  test_main.py
